# my-unitree

./: .env.example  .gitignore  README.md  pyproject.toml
conversa/: __init__.py  chat.py  cli.py  voz.py
conversa_openai_ptpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
conversation/: __init__.py  cli.py  tools.py  voice.py
conversation/knowledge/: digitalsign.json
diagnostics/: __init__.py  cli.py
my_unitree/: __init__.py  configuration.py
robot/: __init__.py  cli.py  services.py
scripts/: activate-unitree.sh  install-unitree.sh
src/conversa_openai_ptpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_chat.py  test_conversation_cli.py  test_robot.py  test_voice.py  test_voz.py
