[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "my-unitree"
version = "0.4.0"
description = "Unitree G1 controls, diagnostics, and OpenAI voice conversation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python-headless>=4.8,<5",
    "python-dotenv>=1.0.1,<1.1",
    "sounddevice>=0.5.1,<1",
    "websocket-client>=1.8.0,<1.9",
]

[project.scripts]
conversation = "conversation.cli:main"
diagnostics = "diagnostics.cli:main"
robot = "robot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["conversation*", "diagnostics*", "my_unitree*", "robot*"]

[tool.setuptools.package-data]
conversation = ["knowledge/*.json"]
